--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -368,6 +368,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.7/purify.min.js"
         integrity="sha512-BdRNuI8/lsyxkKQVxK1lVtfZshggfXPAwEP+JAOJEKx6Y8SLfcBSRdaWyXQmMxo+wG180uFqXYGjGRL0mh4/Jw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/string-strip-html@13.4.8/dist/string-strip-html.umd.min.js"></script>
 </body>
 
 </html>
