--- a/admin/src/web/templates/articles/create.html
+++ b/admin/src/web/templates/articles/create.html
@@ -109,6 +109,7 @@
                 <i style="transform: scale(0.6);" class="fa fa-chevron-left me-1"></i>
                 Volver
             </a>
+            {% if check_permission(session,'content_new') %}
             <div class="btn-group dropdown-menu-end">
                 <button type="button" class="btn btn-warning" onclick="setStatus(0)">Guardar como borrador</button>
                 <button type="button" class="btn btn-warning dropdown-toggle dropdown-toggle-split"
@@ -120,6 +121,7 @@
                     </li>
                 </ul>
             </div>
+            {% endif %}
         </div>
     </form>
 </div>
