--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -232,6 +232,10 @@
                             href="{{ url_for('registro_pagos_jya.index') }}">Registro de cobros</a>
                     </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint.startswith('statistics.') %}active{% endif %}"
+                            href="{{ url_for('statistics.index') }}">Estadísticas</a>
+                    </li>
                     {% if check_permission(session,'content_index')%}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint.startswith('articles.') %}active{% endif %}"
