--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -232,10 +232,12 @@
                             href="{{ url_for('registro_pagos_jya.index') }}">Registro de cobros</a>
                     </li>
                     {% endif %}
+                    {% if check_permission(session,'reg_cobros_index') or check_permission(session,'reg_pagos_index') or check_permission(session,'team_index') or check_permission(session,'jya_index')%}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint.startswith('statistics.') %}active{% endif %}"
                             href="{{ url_for('statistics.index') }}">Estadísticas</a>
                     </li>
+                    {% endif %}
                     {% if check_permission(session,'content_index')%}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint.startswith('articles.') %}active{% endif %}"
