--- a/admin/src/web/templates/statistics/balance_report.html
+++ b/admin/src/web/templates/statistics/balance_report.html
@@ -4,6 +4,18 @@
 
 {% block head %}
 {{ super() }}
+<style>
+    @media screen and (max-width: 768px) {
+  
+      /* Ocultar columnas en pantallas pequeñas */
+      tr>td:nth-child(3),
+      tr>td:nth-child(4),
+      tr>th:nth-child(3),
+      tr>th:nth-child(4) {
+        display: none;
+      }
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
@@ -45,7 +57,7 @@
         <h2 style="background-color: #28a745; color: #ffffff; padding: 10px; cursor: pointer;" onclick="toggleTable('incomesTable', this)">
             Ingresos <i class="fas fa-chevron-down"></i>
         </h2>
-        <table id="incomesTable" class="table table-striped table-hover" style="display: none;">
+        <table id="incomesTable" class="table table-striped table-hover table-responsive" style="display: none;">
             <thead>
                 <tr>
                     <th style="background-color: #28a745; color: #ffffff;">
@@ -87,7 +99,7 @@
         <h2 style="background-color: #dc3545; color: #ffffff; padding: 10px; cursor: pointer;" onclick="toggleTable('outflowsTable', this)">
             Egresos <i class="fas fa-chevron-down"></i>
         </h2>
-        <table id="outflowsTable" class="table table-striped table-hover" style="display: none;">
+        <table id="outflowsTable" class="table table-striped table-hover table-responsive" style="display: none;">
             <thead>
                 <tr>
                     <th style="background-color: #dc3545; color: #ffffff;">
@@ -139,7 +151,7 @@
     }
 </script>
 <div>
-    <img src="{{ url_for('statistics.balance') }}" alt="Gráfico de balance ingreso/egreso"> 
+    <img src="{{ url_for('statistics.balance') }}" alt="Gráfico de balance ingreso/egreso" class="img-fluid"> 
 </div>
 {% endblock %}
 
