--- a/admin/src/web/templates/statistics/index.html
+++ b/admin/src/web/templates/statistics/index.html
@@ -137,7 +137,7 @@
                     <h5 class="stats-card-title">Balance mensual</h5>
                 </div>
                 <div class="stats-card-body">
-                    <a href="{{ url_for('statistics.balance') }}">
+                    <a href="{{ url_for('statistics.balance_graphic') }}">
                         <img src="{{ url_for('statistics.balance') }}" alt="Gráfico de balance ingreso/egreso">
                     </a>
                 </div>
@@ -150,7 +150,7 @@
                     <h5 class="stats-card-title">Miembros del equipo por puesto laboral</h5>
                 </div>
                 <div class="stats-card-body">
-                    <a href="{{ url_for('statistics.job') }}">
+                    <a href="{{ url_for('statistics.job_graphic') }}">
                         <img src="{{ url_for('statistics.job') }}" alt="Gráfico de miembros/puestos de trabajo">
                     </a>
                 </div>
@@ -163,7 +163,7 @@
                     <h5 class="stats-card-title">Rangos de edades de jinetes y amazonas</h5>
                 </div>
                 <div class="stats-card-body">
-                    <a href="{{ url_for('statistics.age') }}">
+                    <a href="{{ url_for('statistics.age_graphic') }}">
                         <img src="{{ url_for('statistics.age') }}" alt="Gráfico de rango de edades entre los jya">
                     </a>
                 </div>
