--- a/admin/src/web/templates/messages/show.html
+++ b/admin/src/web/templates/messages/show.html
@@ -146,7 +146,7 @@
                 <div id="commentForm" style="display:none;">
                     <form action="{{ url_for('internal_messages.add_comment', id=message.id) }}" method="post">
                         <div class="form-group mb-3">
-                            <textarea class="form-control" name="comment" maxlength="399" placeholder="Escribe tu comentario aquí..." required></textarea>
+                            <textarea class="form-control" name="comment" maxlength="399" placeholder="Escribe tu comentario aquí..." required>{{ message.comment }}</textarea>
                         </div>
                         <button type="submit" class="btn btn-success">Aceptar</button>
                         <button type="button" class="btn btn-secondary" onclick="toggleCommentForm()">Cancelar</button>
